[project]
name = "drp-warm-start"
version = "0.1.0"
description = "Warm-start training with cyclical learning rate for cancer drug-response prediction under strict disjoint cell/drug partitioning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # NOTE: the default PyPI wheel for torch may be built for a CUDA runtime
    # newer than the system driver. If `python -c "import torch; torch.cuda.is_available()"`
    # raises a driver-too-old error, reinstall torch with a matching CUDA wheel:
    #
    #     pip install torch --index-url https://download.pytorch.org/whl/cu124
    #
    # (or cu121 / cu118 / cpu — pick to match `nvidia-smi`'s reported CUDA version).
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
drp-split = "drp_warm.cli:split_main"
drp-train-warm = "drp_warm.cli:train_warm_main"
drp-train-continue = "drp_warm.cli:continue_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
